@@ -1,8 +1,8 @@
 # care_connect_flutter_frontend
 
-This is the flutter front end for the CareConnect application 
+This is the flutter front end for the CareConnect application
 
-## Running the Application 
+## Running the Application
 
 There are multiple ways to run the application first run
 
@@ -12,7 +12,7 @@ flutter pub get
 
 this will make sure that all your application dependencies are up to date.
 
-Next use 
+Next use
 
 ```
 flutter run -d chrome
@@ -20,7 +20,7 @@ flutter run -d chrome
 
 to run the application in Google Chrome.
 
-## Building the application 
+## Building the application
 
 There are multiple ways to build the application first run
 
@@ -30,7 +30,7 @@ flutter pub get
 
 this will make sure that all your application dependencies are up to date.
 
-Next use 
+Next use
 
 ```
 flutter build
@@ -38,7 +38,49 @@ flutter build
 
 and select which type of application you wish to build.
 
-## Troubleshooting 
-<TODO>
+## Running Tests
 
-### AI Disclosure: The code in this project was written with the help of Figma Make, Claude Opus 5, and Claude Sonnet 5 many of the screens were adapted from screens written with Figma Make and Claude Opus 5 as well with Figma and Claude working to translate the screens into code which was then edited and check by the Team in order to better reflect the project. The code has been subject to changes by Team 7 and all content is to be reviewed by Team 7 before submission.
+Run the full suite with:
+
+```
+flutter test
+```
+
+or a single file with:
+
+```
+flutter test <path to file>
+```
+
+## Test Coverage Report
+
+`coverage/` is git-ignored, so there is no hosted report — generate one locally:
+
+```
+flutter test --coverage
+genhtml coverage/lcov.info -o coverage/html
+```
+
+Then open `coverage/html/index.html` in a browser (requires `lcov`/`genhtml` installed). As of 2026-09-08, overall line coverage is 96.0% (1,524 of 1,587 lines).
+
+## Troubleshooting
+
+On Windows, Flutter's build process relies on symlinks, which are restricted to administrators by default. If `flutter run`/`flutter build` fails with a symlink-related error, enable Developer Mode via:
+
+```
+start ms-settings:developers
+```
+
+Additionally, Flutter may give some warning when building the apk ios it should build; however, if you do not want the warnings you can use.
+```
+flutter build apk --enable-native-access=ALL-UNNAMED
+```
+
+## Known Issues / Limitations
+
+- No backend/API integration yet — all data is static/in-memory (see `lib/data.dart`).
+- No CI/CD pipeline; run `flutter test` and regenerate coverage locally before opening a PR.
+
+### AI Disclosure:
+
+The code in this project was written with the help of Figma Make, Claude Opus 5, and Claude Sonnet 5 many of the screens were adapted from screens written with Figma Make and Claude Opus 5 as well with Figma and Claude working to translate the screens into code which was then edited and check by the Team in order to better reflect the project. The code has been subject to changes by Team 7 and all content is to be reviewed by Team 7 before submission.
